fix svelte-math dark mode

--- a/sites/svelte-math/src/app.css
+++ b/sites/svelte-math/src/app.css
@@ -7,4 +7,5 @@
   background-color: #f5f5f5;
   padding: 0.5rem !important;
   border-radius: 0 !important;
+  color: green !important;
 }
